# under_the_microscope

./: README.md  pyproject.toml
microscope/: settings.py  urls.py
my_user/: admin.py  forms.py  models.py  urls.py  views.py
my_user/migrations/: 0001_initial.py
my_user/static/css/: my_user.css
my_user/templates/: base.html  general_form.html  index.html  invalid_login.html  login.html  menu_bar.html
